--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "dom-helpers": "^2.3.0",
     "invariant": "^2.1.0",
     "lodash": "^3.10.1",
+    "react-modal": "^1.4.0",
     "react-overlays": "^0.6.0",
     "react-prop-types": "^0.2.1",
     "uncontrollable": "^3.1.0",
